--- a/core/build.gradle
+++ b/core/build.gradle
@@ -41,6 +41,9 @@ dependencies {
     implementation 'com.squareup.moshi:moshi:1.8.0'
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.8.0'
 
+    // RxJava 3
+    implementation "io.reactivex.rxjava3:rxjava:3.0.11"
+
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
