--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,12 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
+
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.0-alpha08"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.30"
+        classpath "com.android.tools.build:gradle:7.0.0-alpha09"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.31"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
