--- a/core/build.gradle
+++ b/core/build.gradle
@@ -34,15 +34,14 @@ android {
 }
 
 dependencies {
-    // adding core module to the main project.
-    implementation project(':core')
 
     //moshi for efficient parsing.
-    implementation 'com.squareup.moshi:moshi:1.8.0'
-    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.8.0'
+    implementation 'com.squareup.moshi:moshi:1.11.0'
+
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.11.0'
 
     // RxJava 3
-    implementation "io.reactivex.rxjava3:rxjava:3.0.11"
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
 
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
