--- a/networking/build.gradle
+++ b/networking/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
 }
 
@@ -8,16 +8,20 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "io.iamjosephmj.clean"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
+        debug{
+            minifyEnabled false
+            useProguard false
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -34,21 +38,26 @@ android {
 
 dependencies {
 
-    implementation project(':presentation')
-
+    // adding core module to the main project.
     implementation project(':core')
 
-    implementation project(':networking')
+    // retrofit dependencies
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    //Rx java adapter
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+
+    implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
+
+    //moshi for efficient parsing.
+    implementation "com.squareup.moshi:moshi:1.11.0"
 
     implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
-
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-
 
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
