--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
 }
 
 dependencies {
+    def lifecycle_version = "2.0.0"
 
     implementation project(':presentation')
 
@@ -43,6 +44,9 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+
+    // ViewModel and LiveData
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
 
 
     implementation 'androidx.core:core-ktx:1.3.2'
