--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ buildscript {
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven { url  "https://dl.bintray.com/bfears/maven" }
 
     }
     dependencies {
