--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,11 +55,13 @@ dependencies {
     // ViewModel and LiveData
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
 
-    implementation 'com.hannesdorfmann:adapterdelegates4-kotlin-dsl:4.3.0'
+    implementation 'com.hannesdorfmann:adapterdelegates4-kotlin-dsl-layoutcontainer:4.3.0'
 
     implementation 'com.airbnb.android:lottie:3.6.1'
 
     implementation 'com.willowtreeapps.spruce:spruce-android:1.1.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 
     // Dagger
     implementation 'com.google.dagger:dagger:2.21'
