--- a/core/build.gradle
+++ b/core/build.gradle
@@ -14,7 +14,6 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -35,18 +34,12 @@ android {
 
 dependencies {
 
+    def coreDependencies = rootProject.ext.coreDependencies
+
     //moshi for efficient parsing.
-    implementation 'com.squareup.moshi:moshi:1.11.0'
+    implementation coreDependencies.moshi
+    kapt coreDependencies.moshiKapt
 
-    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.11.0'
-
-    // RxJava 3
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
-
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation coreDependencies.rxKotlin
+    implementation coreDependencies.ktx
 }
