--- a/networking/build.gradle
+++ b/networking/build.gradle
@@ -13,12 +13,11 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
-        debug{
+        debug {
             minifyEnabled false
             useProguard false
         }
@@ -38,27 +37,22 @@ android {
 
 dependencies {
 
+    def coreDependencies = rootProject.ext.coreDependencies
+
+    def networkDependencies = rootProject.ext.networkDependencies
+
     // adding core module to the main project.
     implementation project(':core')
 
+    implementation coreDependencies.rxKotlin
+    implementation coreDependencies.ktx
+    implementation coreDependencies.moshi
+
+
     // retrofit dependencies
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    //Rx java adapter
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    implementation networkDependencies.retrofit
+    implementation networkDependencies.rxAdapter
+    implementation networkDependencies.interceptor
+    implementation networkDependencies.moshiConverter
 
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
-
-    implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
-
-    //moshi for efficient parsing.
-    implementation "com.squareup.moshi:moshi:1.11.0"
-
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
-
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
